[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/kenney_prototypes/assets/colors/purple/scenes/prototype_purple_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Obstacles/OpenCloseDoor.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/red/scenes/prototype_red_01.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/Fissure.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5, 2, 0.15 )

[node name="OpenCloseDoor" type="Spatial"]
script = ExtResource( 2 )

[node name="Door" type="StaticBody" parent="." groups=["AntiTentacle"]]
collision_layer = 6
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="PrototypeCube" parent="Door" instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2, 0, 0, 0, 0.15, -1.5, 0, -0.15 )
visible = false

[node name="PrototypeCube2" parent="Door" instance=ExtResource( 3 )]
transform = Transform( 1.5, 0, 0, 0, 2, 0, 0, 0, 0.15, -1.5, 0, -0.15 )

[node name="Tween" type="Tween" parent="."]

[node name="OpenPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.9, 0 )

[node name="ClosePosition" type="Position3D" parent="."]

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01332, 0 )
stream = ExtResource( 4 )
unit_size = 6.0
max_db = 1.2
bus = "SFX"

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
